--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,18 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background-color: #e8faf5;
+  }
+  .background-container {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+    z-index: -1; /* Place the overlay behind other content */
+    background-image: url("../assets/street.jpg");
+    background-size: cover;
+    background-position: center center;
+    opacity: 0.3; /* Adjust opacity here */
   }
   #camion {
     width: 100px;
